# Triton

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  output_commands.sh  software-design.md
.changelogs/0.1.0/: 2025-05-28T10_44_06_530406.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  release-notes.yml  release.yaml
sample/: erDiagram.md  erDiagram.mermaid  execute.sh  sample.rs  test.md  test.sh  upgrade.md
src/: cli.rs  generator.rs  lib.rs  main.rs  parser.rs  types.rs
src/migration/: mod.rs  modifier.rs  parser.rs
tests/: benchmark_test.rs  edge_cases_test.rs  error_handling_test.rs  integration_tests.rs
tests/common/: mod.rs
tests/unit/: cli_tests.rs  mod.rs  parser_tests.rs
