[package]
name = "triton"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI関連
clap = { version = "4.4", features = ["derive"] }

# 非同期ランタイム
tokio = { version = "1.0", features = ["full"] }

# Rust AST解析（マイグレーション機能用）
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"

# エラーハンドリング
anyhow = "1.0"
thiserror = "1.0"

# 正規表現（既存のパーサーで使用している場合）
regex = "1.0"

# ログ出力（オプション）
log = "0.4"
env_logger = "0.10"
